Final changes for project.

--- a/index.html
+++ b/index.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -7,28 +8,105 @@
   <title>Responsive Image Gallery</title>
   <link href="css/style.css" rel="stylesheet">
 </head>
+
 <body>
 
   <header>
     <nav>
-      <a href="index.html"><img id="logo" src="images/globe.svg" alt="Globe Logo" /></a>
+      <a href="#index.html"><img id="logo" src="images/globe.svg" alt="Globe Logo" /></a>
     </nav>
 
     <h1>Random</h1>
 
-    <p id="quote"><q>I haven't been everywhere, but it's on my list.</q><p id="author"> &mdash; Susan Sontag</p></p>
+    <p id="quote"><q>I haven't been everywhere, but it's on my list.</q>
+      <span id="author"> &mdash; Susan Sontag</span>
+    </p>
   </header>
 
 
   <main>
-    <img src="images/placeholder.png" alt="Placeholder">
-    <img src="images/placeholder.png" alt="Placeholder">
-    <img src="images/placeholder.png" alt="Placeholder">
-    <img src="images/placeholder.png" alt="Placeholder">
-    <img src="images/placeholder.png" alt="Placeholder">
-    <img src="images/placeholder.png" alt="Placeholder">
-    <img src="images/placeholder.png" alt="Placeholder">
-    <img src="images/placeholder.png" alt="Placeholder">
+    <article>
+      <ul>
+        <li>Username</li>
+        <li>Likes</li>
+      </ul>
+
+      <img src="images/placeholder.png" alt="Placeholder">
+    </article>
+
+    <article>
+      <ul>
+        <li>Username</li>
+        <li>Likes</li>
+      </ul>
+
+      <img src="images/placeholder.png" alt="Placeholder">
+    </article>
+
+    <article>
+      <ul>
+        <li>Username</li>
+        <li>Likes</li>
+      </ul>
+
+      <img src="images/placeholder.png" alt="Placeholder">
+    </article>
+
+    <article>
+      <ul>
+        <li>Username</li>
+        <li>Likes</li>
+      </ul>
+
+      <img src="images/placeholder.png" alt="Placeholder">
+    </article>
+
+    <article>
+      <ul>
+        <li>Username</li>
+        <li>Likes</li>
+      </ul>
+
+      <img src="images/placeholder.png" alt="Placeholder">
+    </article>
+
+    <article>
+      <ul>
+        <li>Username</li>
+        <li>Likes</li>
+      </ul>
+
+      <img src="images/placeholder.png" alt="Placeholder">
+    </article>
+
+    <article>
+      <ul>
+        <li>Username</li>
+        <li>Likes</li>
+      </ul>
+
+      <img src="images/placeholder.png" alt="Placeholder">
+    </article>
+
+    <article>
+      <ul>
+        <li>Username</li>
+        <li>Likes</li>
+      </ul>
+
+      <img src="images/placeholder.png" alt="Placeholder">
+    </article>
+
+    <article>
+      <ul>
+        <li>Username</li>
+        <li>Likes</li>
+      </ul>
+
+      <img src="images/placeholder.png" alt="Placeholder">
+    </article>
+
+
   </main>
 
   <footer>
@@ -38,4 +116,5 @@
   <script src="js/script.js"></script>
 
 </body>
+
 </html>
